@@ -1,6 +1,5 @@
 - audit options for what's new/deprecated/removed from FC5->FC6
 - add RHEL4, RHEL5
-- set up real DEVEL version
 - redo documentation:
    - describe how to subclass the important things
    - update programmers-guide
